2006-01-23  Gary Benson  <gbenson@redhat.com>

	* java/net/SocketPermission.java: Almost completely rewritten.

2006-01-23  Lillian Angel  <langel@redhat.com>
	
	* javax/swing/text/DefaultStyledDocument.java
	(insertFracture): Set temp leaf's attributes to prevent an NPE.

2006-01-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java:
	Formatted ElementBuffer and added new fields.
	(remove): Added check to determine if length is 0.
	(insertFirstContentTag): Initialized firstCreated to the element that is created 
	by the first tag encountered. Removed check in JoinPreviousDirection case, no
	longer needed. In OriginateDirection case, added a loop to remove all old leafs
	that have been recreated.
	(insertContentTag): Cleaned up code. Removed checks that did not do anything.
	(insertFracture): Fixed up code, removed unneeded objects and checks. Added
	FIXME tags to the lines that need to be rewritten.	

2006-01-23  Mark Wielaard  <mark@klomp.org>

	* examples/Makefile.am: Add support for fastjar.

2006-01-23  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/regexp/REToken.java(empty): Made Cloneable.
	* gnu/regexp/RETokenOneOf.java(match): RE.java(match):
	Use separate methods matchN and matchP depending on the
	boolean negative.
	(matchN): New method used when negative. Done as before.
	(matchP): New method used when not negative. Each token is
	tried not by itself but by a clone of it.

2006-01-23  Chris Burdess  <dog@gnu.org>

	Fixes bug #25906
	* gnu/xml/dom/DomCharacterData.java: Use a separate empty node list
	  class to avoid getLength method contention.
	* gnu/xml/stream/SAXParser.java: Rethrow correct exception.

2006-01-23  Chris Burdess  <dog@gnu.org>

	* native/jni/java-util/Makefile.am: Include library required
	  explicitly by BSD systems.
	* native/target/generic/target_generic_misc.h: Remove old commented
	  out code.
	* native/target/generic/target_generic_network.h: Fallbacks (to